--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -1,17 +1,18 @@
 <form id="corporateInformation">
-    <div class="card p-4 border-warning mb-4">
-
-        <p>
-            <b>Is the information correct?</b>
-        </p>
-        <p>
-            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
-        </p>
+    <div class="usa-alert usa-alert-warning mb-4">
+    	<div class="usa-alert-body">
+	        <p>
+	            <b>Is the information correct?</b>
+	        </p>
+	        <p>
+	            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
+	        </p>
+	    </div>
         
     </div>
     <div class="corset">
-		<h2 class="type1">Company Details</h2>
-		<table id="corpDUNS" class="table table-bordered" role="presentation">
+		<h4 class="type1">Company Details</h4>
+		<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
 			<tbody><tr>
 				<td class="first" width="40%">UEI Number:</td>
 				<td width="60%">
@@ -54,10 +55,10 @@
 		</tbody></table>
 
 		 
-		<h2 class="type1">Company Address</h2>
-		<table id="corpAddress" class="table table-bordered" role="presentation">
+		<h4 class="type1">Company Address</h4>
+		<table id="corpAddress" class="table table-responsive table-flush w-100" role="presentation">
 			
-			<tbody><tr>
+			<tr>
 				<td class="first" width="40%">Street1:</td>
 				<td width="60%" class="camel">
 					10505 FURNACE RD STE 108
@@ -83,11 +84,11 @@
 				<td class="first">Country:</td>
 				<td class="camel">USA</td>
 			</tr>
-		</tbody></table>
+		</table>
 
 		 
-		<h2 class="type1">Mailing Address</h2>
-		<table class="table table-bordered" role="presentation">
+		<h4 class="type1">Mailing Address</h4>
+		<table class="table table-responsive table-flush" role="presentation">
 			
 			<tbody><tr>
 				<td class="first" width="40%">Company Name:</td>
