--- a/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/negotiators/negotiators.component.html
@@ -1,6 +1,7 @@
 <form id="negotiators">
 
-    <div class="card border-warning p-4 mb-4">
+    <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert-body">
         <p><b class="black">Who will negotiate your eOffer?</b></p>
         <p align="justify">Offerors can add multiple negotiators. A minimum of one negotiator must have signature
             authority, but it is STRONGLY recommended to have at least two valid Negotiators.
@@ -8,9 +9,10 @@
             may submit the eOffer and sign the Contract.
         </p>
     </div>
+    </div>
     <div class="table2">
-        <h2 class="type1" id="yournegs">Your Negotiator(s)</h2>
-        <table id="negInfo" class="table table-striped table-bordered buttonsTable" aria-labelledby="yournegs">
+        <h4 class="type1" id="yournegs">Your Negotiator(s)</h4>
+        <table id="negInfo" class="table table-responsive table-striped table-flush buttonsTable" aria-labelledby="yournegs">
             <thead>
                 <tr>
                     <th scope="col" width="40%">Name</th>
