--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
@@ -1,13 +1,15 @@
 <form id="solicitationClauses">
     
-    <div class="card border-warning p-4 mb-4">
+     <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert-body">
         <p class="clearBoth">Please respond to the below terms and conditions that apply to your proposed offerings.</p>
         <p>You must respond to all clauses to complete this section.</p>
     </div>
+    </div>
 
 
-    <h2 id="clau" class="type1">Clauses</h2>
-    <table aria-labelledby="clau" class="table table-bordered table-striped buttonsTable" id="tempTable">
+    <h4 id="clau" class="type1">Clauses</h4>
+    <table aria-labelledby="clau" class="table table-responsive table-bordered table-striped buttonsTable" id="tempTable">
         <thead>
             <tr>
                 <th width="40%" scope="col">
