--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-provisions/solicitation-provisions.component.html
@@ -1,13 +1,15 @@
 <form id="solicitationProvisions">
 
-    <div class="card border-warning p-4 mb-4">
+    <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert-body">
         <p>The following solicitation provisions are based on SCP-FSS-001 and are automatically included as applicable
             for this schedule. Each provision contains specific factors, which are laid out in the table below. Please
             respond completely and thoroughly to each provision as outlined in the provision-specific directions.</p>
     </div>
+</div>
 
     <div class="table2">
-        <table aria-labelledby="h1val" class="table table-striped table-bordered buttonsTable">
+        <table aria-labelledby="h1val" class="table table-responsive table-striped table-bordered buttonsTable">
             <thead>
                 <tr>
                     <th width="70%" scope="col">Provision</th>
