--- a/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
@@ -1,20 +1,28 @@
 <form id="uploadDocuments">
+
+    <div class="usa-alert usa-alert-info mb-4">
+        <div class="usa-alert-body">
     <p><b class="black">Attach supporting documents to this eOffer.</b></p>
     <p>Upload all documents associated with your eOffer.</p>
     <p>Some of the attachments are required based on the responses provided in other templates.</p>
     <p>Only files of size less than or equal to <b>100.0 MB</b> can be uploaded.</p>
     <p>Service and product text file has been named as 'Terms and Conditions Text File'.</p>
-    <hr>
-    <h2 class="type1">Documents</h2>
+</div></div>
+    <h4 class="type1">Documents</h4>
     <p>If you have other documents that you want to upload that do not show in the list below, click on 'Other
         (optional-offeror defined)' and select the document you want to upload. Once you select the document type, you
         will be able to attach the document to that category. If you do not find what you need in this list you may
         still use the "Other" category to upload your document.</p>
+
+
+
+
+
     <!--upload Information starts here-->
     <style xmlns:encoder="gov.gsa.eoffer.common.util.Base64"></style>
     <div xmlns:java="http://xml.apache.org/xslt/java" class="table2">
         <span id="docs" class="visually-hidden">Documents</span>
-        <table aria-labelledby="docs" id="eOfferDocsTable" class="table table-striped table-bordered nested">
+        <table aria-labelledby="docs" id="eOfferDocsTable" class="table table-responsive table-striped table-bordered nested">
             <thead>
                 <tr>
                     <th width="10%">Type</th>
@@ -38,7 +46,7 @@
                     <td class="nested" nowrap="yes" valign="top">Exceptions to Certs and Reps - 52.212-3<span
                             class="required">&nbsp;*&nbsp;</span><span class="visually-hidden">Required</span></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -60,7 +68,7 @@
                     <td class="nested" nowrap="yes" valign="top">Financial Documents<span
                             class="required">&nbsp;*&nbsp;</span><span class="visually-hidden">Required</span></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">Information Technology</td>
@@ -82,7 +90,7 @@
                     <td class="nested" nowrap="yes" valign="top">Price Proposal Template<span
                             class="required">&nbsp;*&nbsp;</span><span class="visually-hidden">Required</span></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -103,7 +111,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Agent Authorization Letter</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -124,7 +132,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Compensation Plan for Professional Employees</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -145,7 +153,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">End User License Agreements (EULA)</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -167,7 +175,7 @@
                     <td class="nested" nowrap="yes" valign="top">Information on Previous Contract Cancellation for
                         Low/No Sales</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -188,7 +196,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Labor Category Descriptions</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -212,7 +220,7 @@
                             href="https://sws-test.fas.gsa.gov/sws-search/generateClauseBodyPdf.do?method=generateClauseBody&amp;solNo=NDdRU01EMjBSMDAwMQ==&amp;clauseNo=SCP-FSS-001&amp;refreshNo=27"><span
                                 class="glyphicon glyphicon-file"></span></a></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -236,7 +244,7 @@
                             href="https://sws-test.fas.gsa.gov/sws-search/generateClauseBodyPdf.do?method=generateClauseBody&amp;solNo=NDdRU01EMjBSMDAwMQ==&amp;clauseNo=SCP-FSS-001&amp;refreshNo=27"><span
                                 class="glyphicon glyphicon-file"></span></a></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -260,7 +268,7 @@
                             href="https://sws-test.fas.gsa.gov/sws-search/generateClauseBodyPdf.do?method=generateClauseBody&amp;solNo=NDdRU01EMjBSMDAwMQ==&amp;clauseNo=SCP-FSS-001&amp;refreshNo=27"><span
                                 class="glyphicon glyphicon-file"></span></a></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -284,7 +292,7 @@
                             href="https://sws-test.fas.gsa.gov/sws-search/generateClauseBodyPdf.do?method=generateClauseBody&amp;solNo=NDdRU01EMjBSMDAwMQ==&amp;clauseNo=SCP-FSS-001&amp;refreshNo=27"><span
                                 class="glyphicon glyphicon-file"></span></a></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -305,7 +313,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Other (optional-offeror defined)</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -329,7 +337,7 @@
                             href="https://sws-test.fas.gsa.gov/sws-search/generateClauseBodyPdf.do?method=generateClauseBody&amp;solNo=NDdRU01EMjBSMDAwMQ==&amp;clauseNo=SCP-FSS-001&amp;refreshNo=27"><span
                                 class="glyphicon glyphicon-file"></span></a></td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -350,7 +358,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Pricing Support (Invoices)</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -371,7 +379,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Section 508 Compliance Information</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -392,7 +400,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Statement of Work</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -413,7 +421,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Subcontracting Plan</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -434,7 +442,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Supporting Documentation</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -455,7 +463,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Trade Agreement Act Sourcing Documents</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
@@ -476,7 +484,7 @@
                 <tr>
                     <td class="nested" nowrap="yes" valign="top">Uncompensated Overtime Policy</td>
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
-                        <table height="100%" id="eOfferNestedDocsTable" class="table table-bordered nextNested">
+                        <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
                                 <tr style="height:auto%;">
                                     <td width="22%">All</td>
