--- a/src/assets/theme/eoffer.css
+++ b/src/assets/theme/eoffer.css
@@ -16,3 +16,11 @@ span.datatable-header-cell-label {
 .panel-title .h1, .panel-title .h2, .panel-title .h3, .panel-title .h4, .panel-title .h5, .panel-title .h6 {
 	color: #2277aa;
 }
+
+.accordion-label {
+	font-size: 1.3rem;
+}
+
+a[aria-expanded="true"]{
+  background-color: #42DCA3;
+}
