Added Modal and Wizard components.

--- a/src/app/modules/e-sell/layouts/e-sell-header/e-sell-header.component.html
+++ b/src/app/modules/e-sell/layouts/e-sell-header/e-sell-header.component.html
@@ -9,7 +9,7 @@
       <div style="
       display: inline-block;
       vertical-align: bottom;">
-      eOffer/eMod
+      e-Sell
       </div>
     </div>
     <!-- eof BRANDING -->  
@@ -33,7 +33,7 @@
           </button>
         </li>
         
-        <li class="nav-item btn-group" dropdown>
+        <!-- <li class="nav-item btn-group" dropdown>
           <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle" aria-controls="dropdown-basic">
             <span class="fal fa-file-signature mr-1"></span> <span class="nav-link-label">Contract Offers</span> <span class="caret"></span>
           </button>
@@ -64,7 +64,7 @@
             <li role="menuitem"><a class="dropdown-item" [routerLink]="['/report-sales']">Reporting My Sales</a></li>
             <li role="menuitem"><a class="dropdown-item" [routerLink]="['/sales-analysis']">Sales Analysis</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="nav-item active">
           <button [routerLink]="['/project-center']" routerLinkActive="active" id="button-home"  type="button" class="btn nav-link" style="white-space: nowrap;" >
             <span class="fal fa-question-circle mr-1"></span> 
