--- a/src/app/modules/e-sell/views/home/toolbox/toolbox.component.html
+++ b/src/app/modules/e-sell/views/home/toolbox/toolbox.component.html
@@ -18,10 +18,7 @@
        
     </div>
   </div>
-  <div class="col-lg-4 col-md-5 p-0 bg-gsa-warm-grey-2" style="overflow: hidden;">
-    
-      <img src="assets/images/content-art/home-img2.jpeg" class="img-responsive float-right d-inline-block" style=" height: 100%; max-width: initial"> 
-    
+  <div class="col-lg-4 col-md-5 p-0 bg-gsa-warm-grey-2" style="overflow: hidden; background-image: url(assets/images/content-art/home-img2.jpeg); background-position: center top; background-size: cover; background-repeat: no-repeat;">
   </div>
 </div>
 
