--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
@@ -1,15 +1,17 @@
 <form id="solicitationClauses">
-    
-     <div class="usa-alert usa-alert-info mb-4">
+
+    <div class="usa-alert usa-alert-info mb-4">
         <div class="usa-alert-body">
-        <p class="clearBoth">Please respond to the below terms and conditions that apply to your proposed offerings.</p>
-        <p>You must respond to all clauses to complete this section.</p>
-    </div>
+            <p class="clearBoth">Please respond to the below terms and conditions that apply to your proposed offerings.
+            </p>
+            <p>You must respond to all clauses to complete this section.</p>
+        </div>
     </div>
 
 
     <h4 id="clau" class="type1">Clauses</h4>
-    <table aria-labelledby="clau" class="table table-responsive table-bordered table-striped buttonsTable" id="tempTable">
+    <table aria-labelledby="clau" class="table table-responsive table-bordered table-striped buttonsTable"
+        id="tempTable">
         <thead>
             <tr>
                 <th width="40%" scope="col">
@@ -38,8 +40,10 @@
                 </td>
                 <td></td>
                 <td></td>
-                <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
-                        href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=basicFormatted">Respond</a>
+                <td class="tbl-button">
+                    <button type="button" class="btn btn-primary btn-sm"
+                        (click)="basicInformation.show()">Respond</button>
+
                 </td>
             </tr>
             <tr>
@@ -81,3 +85,53 @@
         </tbody>
     </table>
 </form>
+
+
+<div bsModal #basicInformation="bs-modal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Modal</h4>
+                <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+                    <span aria-hidden="true" class="visually-hidden">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <ng-wizard [config]="config" (stepChanged)="stepChanged($event)">
+
+                    <ng-wizard-step [title]="'Step 1'" [description]="'Step 1 description'"
+                        [canEnter]="isValidTypeBoolean" [canExit]="isValidFunctionReturnsBoolean.bind(this)">
+                        <span>Step 1 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 2'" [description]="'Step 2 description'"
+                        [state]="stepStates.disabled">
+                        <span>Step 2 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 3'" [description]="'Step 3 description'"
+                        [canEnter]="isValidFunctionReturnsObservable.bind(this)"
+                        [canExit]="isValidFunctionReturnsBoolean.bind(this)">
+                        <span>Step 3 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 4'" [description]="'Step 4 description'">
+                        <span>Step 4 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 5'" [description]="'Step 5 description'" [state]="stepStates.hidden">
+                        <span>Step 5 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 6'" [description]="'Step 6 description'" [state]="stepStates.error">
+                        <span>Step 6 content</span>
+                    </ng-wizard-step>
+
+                    <ng-wizard-step [title]="'Step 7'" [description]="'Step 7 description'">
+                        <span>Step 7 content</span>
+                    </ng-wizard-step>
+                </ng-wizard>
+            </div>
+        </div>
+    </div>
+</div>
