--- a/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/upload-documents/upload-documents.component.html
@@ -48,7 +48,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -70,7 +70,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">Information Technology</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -92,7 +92,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -113,7 +113,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -134,7 +134,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -155,7 +155,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -177,7 +177,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -198,7 +198,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -222,7 +222,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -246,7 +246,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -270,7 +270,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -294,7 +294,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -315,7 +315,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -339,7 +339,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -360,7 +360,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -381,7 +381,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -402,7 +402,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -423,7 +423,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -444,7 +444,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -465,7 +465,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
@@ -486,7 +486,7 @@
                     <td style="padding:0; margin:0; height:100%;" cellpadding="0" cellspacing="0" colspan="3">
                         <table height="100%" id="eOfferNestedDocsTable" class="table table-responsive table-bordered nextNested">
                             <tbody>
-                                <tr style="height:auto%;">
+                                <tr style="height:auto;">
                                     <td width="22%">All</td>
                                     <td width="50%"></td>
                                     <td width="22%"></td>
