--- a/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
+++ b/src/app/modules/supplier-portal/layouts/supplier-portal-workspace-layout/supplier-portal-workspace-layout.component.html
@@ -1,21 +1,25 @@
 <section>
     <div class="container-fluid px-5 py-5">
         <div class="row content-row pb-3">
-            <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">                
-                <ng-container *ngIf="aside">
-                    <ng-container [ngTemplateOutlet]="aside"></ng-container>
-                </ng-container>
+            <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3 d-xs-none d-sm-none d-md-block">
+                <div class="sticky-top">
+
+                    <ng-container *ngIf="aside">
+                        <ng-container [ngTemplateOutlet]="aside"></ng-container>
+                    </ng-container>
+
+                </div>
             </div>
             <div class="col">
-                
-                    <div class="row">
-                        <div class="col-lg">               
-                            <ng-container *ngIf="body">
-                                <ng-container [ngTemplateOutlet]="body"></ng-container>
-                            </ng-container>
-                        </div>
+                <div class="row">
+                    <div class="col-lg">
+
+                        <ng-container *ngIf="body">
+                            <ng-container [ngTemplateOutlet]="body"></ng-container>
+                        </ng-container>
+                        
                     </div>
-                
+                </div>
             </div>
         </div>
     </div>
