--- a/src/app/modules/supplier-portal/views/offer-form/submit-offer/submit-offer.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/submit-offer/submit-offer.component.html
@@ -1,1 +1,7 @@
-<p>submit-offer works!</p>
+<ng-container *ngIf="offerStatus == 'In Progress'">
+    <a class="btn btn-primary my-3 btn-lg btn-block" (click)="submitOffer()">Submit</a>
+</ng-container>
+
+<ng-container *ngIf="offerStatus == 'Signed'">
+    <a class="btn btn-primary my-3 btn-lg btn-block" (click)="submitOffer()">Sign</a>
+</ng-container>
